--- a/style.css
+++ b/style.css
@@ -344,7 +344,6 @@ p {
   Section Title Two CSS
 ===========================*/
 .section-title-two {
-  text-align: center;
   max-width: 550px;
   margin: auto;
   margin-bottom: 50px;
@@ -916,6 +915,11 @@ p {
   width: 100%;
   height: 500px;
 }
+.header-eleven .shape svg {
+  vertical-align: bottom;
+  position: absolute;
+  bottom: -1px;
+}
 
 @media only screen and (min-width: 768px) and (max-width: 991px), (max-width: 767px) {
   .header-eleven .shape {
@@ -1122,9 +1126,7 @@ p {
   }
 }
 .features-twelve .section-title-two {
-  text-align: center;
-  max-width: 1080px;
-  margin: auto;
+  max-width: initial;
   margin-bottom: 50px;
   position: relative;
   z-index: 5;
@@ -1180,7 +1182,7 @@ p {
   z-index: 2;
   overflow: hidden;
   transition: all 0.4s ease-in-out;
-  height: 322px;
+  height: 100%;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -2517,7 +2519,11 @@ p {
   top: -40px;
 }
 
+.proper-text {
+  color: var(--black) !important;
+}
 .proper-text p {
+  color: var(--black) !important;
   margin-bottom: 15px;
 }
 
@@ -2525,14 +2531,36 @@ ul.proper-text li {
   list-style: disc;
   margin-left: 20px;
 }
+ul.proper-text li::marker {
+  color: var(--primary-light);
+}
 
 .whydbt-section {
   padding: 100px 0;
 }
 .whydbt-section h2 {
   font-size: 5rem;
-  color: var(--primary);
+  color: var(--dark-1);
   text-align: center;
+}
+
+.components-section {
+  padding: 100px 0;
+}
+.components-section h2 {
+  margin-bottom: 20px;
+}
+
+.acknowledgements-section {
+  padding: 100px 0;
+}
+.acknowledgements-section h2,
+.acknowledgements-section p {
+  margin-bottom: 20px;
+}
+
+.technology-section h4 {
+  margin-bottom: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
